# code_animate

./: README.md  pyproject.toml  test.py  tests.py
src/code_animate/: __init__.py  animate.py  framify.py  main.py
src/code_animate/helpers/: animate_helper.py  classes.py  draw_helper.py  exceptions.py  frame_helper.py  func_helper.py  main_helper.py  models.py  string_helper.py
